crate new product code automaticlly when create product template, and list all similar products when input the description

--- a/product_flexible_code/views/views.xml
+++ b/product_flexible_code/views/views.xml
@@ -150,11 +150,13 @@
         <field name="type" position="before">
           <field name="stock_category" />
         </field>
-        <field name="description" position="before">
+        <field name="description" position="replace">
           <group>
           <field name="production_efficiency" />
           <field name="product_description_template" />
           <field name="product_description_sample" />
+          <field name="description" />
+          <field name="similar_products" readonly="1"/>
         </group>
         </field>
     </field>
