mark some field as readonly

--- a/product_flexible_code/views/views.xml
+++ b/product_flexible_code/views/views.xml
@@ -153,8 +153,8 @@
         <field name="description" position="replace">
           <group>
           <field name="production_efficiency" />
-          <field name="product_description_template" />
-          <field name="product_description_sample" />
+          <field name="product_description_template" readonly="1"/>
+          <field name="product_description_sample" readonly="1"/>
           <field name="description" />
           <field name="similar_products" readonly="1"/>
         </group>
