--- a/product_flexible_code/views/views.xml
+++ b/product_flexible_code/views/views.xml
@@ -162,6 +162,17 @@
     </field>
 </record>
 
+<record id="product_template_only_form_view" model="ir.ui.view">
+    <field name="name">product.template.product.form</field>
+    <field name="model">product.template</field>
+    <field name="inherit_id" ref="product.product_template_only_form_view" />
+    <field name="arch" type="xml">
+        <field name="default_code" position="attributes">
+            <attribute name="attrs">{ 'invisible': [('product_variant_count', '>', 1)], 'readonly': [('stock_category','!=',False)]}</attribute>
+        </field>
+    </field>
+</record>
+
 <record id="product_normal_form_view_inherit_cat" model="ir.ui.view">
     <field name="name">product.normal.form.inherit.cat</field>
     <field name="model">product.product</field>
@@ -171,7 +182,11 @@
           <button name="button_renew_code"
                   string="Renew Code"
                   type="object"
+                  attrs="{'invisible': [('stock_category','=',False)]}"
                  /> 
+        </field>
+        <field name="default_code" position="attributes">
+            <attribute name="attrs">{'readonly': [('stock_category','!=',False)]}</attribute>
         </field>
     </field>
 </record>
